projects/prove/mongodb/dev/mongodb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb
  labels:
    app: mongodb
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
        -  prove-dev-mongodb.coherent.in
      secretName: mongodb-tls
  rules:
    - host: "prove-dev-mongodb.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongodb
                port:
                  number: 27019
